[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/missleSprites.png" type="Texture" id=1]
[ext_resource path="res://Projectiles/Missile.gd" type="Script" id=2]
[ext_resource path="res://SFX/Explosion 1.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.1805, 4.66387 )

[sub_resource type="Animation" id=2]
resource_name = "fly"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Timeout"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.9, 1.4, 1.8, 2.2, 2.5, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.847059, 0.756863, 0.160784, 1 ), Color( 1, 1, 1, 1 ), Color( 0.847059, 0.756863, 0.160784, 1 ), Color( 1, 1, 1, 1 ), Color( 0.847059, 0.756863, 0.160784, 1 ), Color( 1, 1, 1, 1 ), Color( 0.847059, 0.756863, 0.160784, 1 ), Color( 1, 1, 1, 1 ), Color( 0.847059, 0.756863, 0.160784, 1 ), Color( 1, 1, 1, 1 ), Color( 0.847059, 0.756863, 0.160784, 1 ), Color( 1, 1, 1, 1 ), Color( 0.847059, 0.756863, 0.160784, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Missile" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true
vframes = 3
frame = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 3000.0

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fly"
anims/fly = SubResource( 2 )

[node name="TimeoutAnimPlayer" type="AnimationPlayer" parent="."]
anims/Timeout = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="animation_finished" from="TimeoutAnimPlayer" to="." method="_on_TimeoutAnimPlayer_animation_finished"]
